--- a/main.css
+++ b/main.css
@@ -11,6 +11,38 @@
   padding: 0;
 }
 
+nav {
+  overflow: hidden;
+  background: #80BBE5;
+  height: 45px;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  padding:0;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+nav span {
+  position: absolute;
+  padding: 10px;
+}
+
+nav ul {
+  float: right;
+}
+
+nav ul li {
+  float: left;
+  padding: 10px;
+  list-style-type: none;
+}
+
+nav ul li:hover {
+  color: black;
+  cursor: pointer;
+}
+
 /*Tshirt Styles*/
 .tshirt {
   position: relative;
@@ -399,6 +431,10 @@ left: 29px;
 
     li.tshirt {
       width: 42%;
+    }
+
+    ul .main-menu {
+      display: none;
     }
 
 @media only screen and (max-width: 391px) {
